--- a/Indoor_Scene_Recognition.ipynb
+++ b/Indoor_Scene_Recognition.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "wjv0TNRihOdI"
       ],
-      "machine_shape": "hm",
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -109,7 +109,7 @@
         "id": "FDYOVev86VHR",
         "outputId": "6d05eae0-1de7-4f5f-93d5-3b1049876d64"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,7 +168,7 @@
         "id": "t3HvxbYn7Rrg",
         "outputId": "531bbb02-2fcb-49a8-bb76-063c2044a97f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1380,7 +1380,7 @@
         },
         "outputId": "abf5d80d-48ad-49ad-a59d-18b392d1ede3"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1402,7 +1402,7 @@
       "metadata": {
         "id": "VBu2iA00HlA4"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1414,7 +1414,7 @@
       "metadata": {
         "id": "07DdQOCvHwYM"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1509,7 +1509,7 @@
           "height": 1000
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1816,7 +1816,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1860,7 +1860,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1891,7 +1891,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1911,7 +1911,7 @@
       "metadata": {
         "id": "Ue4gnYEqTW7t"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2004,7 +2004,7 @@
           "height": 1000
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
